skeplib/tests/fixtures/resolver/invalid/missing_imported_operator_export/a.sk
fn shown() -> Int { return 1; }
export { shown };
